Update set_files.md
Updaing